<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/tv_first"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/first"/>

        <EditText
            android:id="@+id/et_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first"
            android:maxLength="10"
            android:inputType="text"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="0dp"/>

        <TextView
            android:id="@+id/tv_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="0dp"
            android:text="@string/Last"/>

        <EditText
            android:id="@+id/et_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last"
            android:inputType="text"
            android:maxLength="10"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="0dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="0dp"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLength="20"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="0dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1"
            android:orientation="horizontal">



            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/register_button" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>